@@ -7,6 +7,9 @@
   * Enables the Stage 1 Loading Screen on some Classic Macs
 - Fixes ESP detection for saving screenshots
   * ESP detection may have sometimes returned 'true' on other locations
+- Implements "DisableAMFI" config option
+  * Disables the Apple Mobile File Integrity (AMFI) checks in Mac OS
+  * Disabling AMFI may further facilitate booting new Mac OS Versions on unsupported Macs
 - Implements "DisableCompatCheck" config option
   * Disables Mac OS compatibility checks to allow booting new Mac OS Versions on unsupported Macs
 - Implements "ForceTrim" config option
